Adding tests of page Accueil and CreationPiles